# call-my-agent

./: .dockerignore  .gitignore  Brewfile  Dockerfile  README.md  main.py  pyproject.toml  tmux.sh
call_my_agent/: __main__.py  docker.py
src/: __init__.py  agent_logic.py  docker.py  main.py
src/call_my_agent/: __init__.py  __main__.py  docker.py
