[project]
name = "call-my-agent"
version = "0.1.0"
description = "Run opencode in container and manage installs with brew"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

# add entrypoint
[project.scripts]
call-my-agent = "call_my_agent.__main__:main"